# backend-go/model/database_health_response.go
@@ -1,0 +1,6 @@
+package model
+
+type DatabaseHealthResponse struct {
+	Status   string `json:"status" example:"ok"`
+	Database string `json:"database" example:"connected"`
+}
